# anchor

./: .env.example  .gitignore  AGENTS.MD  CLAUDE.md  LANDING_PAGE_PROMPT.md  MVP_PLAN.md  SETUP_GUIDE.md  TESTING_GUIDE.md  docker-compose.yaml  package.json  pyproject.toml  readme.md  requirements.txt  test.py
.agents/skills/auth-guard-enforcer/: SKILL.md
.agents/skills/clickhouse-query-optimizer/: SKILL.md
.cursor/canvas/: system-architecture.html
.next/: app-build-manifest.json  trace
.next/cache/: config.json
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: not-found.js  (+4 more)
configs/: README.md  clickhouse-config.xml  otel-collector-config.yaml
dashboard/: Dockerfile  README.md  package-lock.json  package.json
dashboard/prisma/: schema.prisma
dashboard/src/: middleware.ts
examples/: README.md  simple_example.py
gateway/: Dockerfile  go.mod  go.sum
gateway/scripts/: seed_keys.sh
infra/: alb.tf  dns.tf  ecr.tf  ecs.tf  efs.tf  main.tf  outputs.tf  variables.tf  vpc.tf
infra/services/: clickhouse.tf  collector.tf  gateway.tf  redis.tf
landing/: index.html  main.js  styles.css
sdk/anchor/: __init__.py  instrument_mapper.py
sdk/tests/: openai_test.py
src/: pyproject.toml  pytest.ini
src/anchor/: __init__.py  instrument_mapper.py
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/engine/: executor.ts  resolver.ts  types.ts
src/instrumentation/: README.md
src/lib/: utils.ts
src/tests/: conftest.py  openai_test.py  requirements.txt  test_gateway_integration.py  test_sdk.py
src/ward/: __init__.py  instrument_mapper.py  pricing.py
supabase/migrations/: 001_initial_schema.sql
(+252 files in other folders)
